telat ke commit
ga tau kenapa, biarin lah

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">PKB</string>
+    <string name="app_name">PKB PHT</string>
+    <string name="pasal">PASAL</string>
+    <string name="ayat">AYAT</string>
 </resources>
